--- a/.fides/policy.yml
+++ b/.fides/policy.yml
@@ -1,41 +1,40 @@
 policy:
-  - fides_key: fidesctl_policy
-    name: Fidesctl Policy
-    description: The main privacy policy for Fidesctl.
-    rules:
-      - name: reject_non_system_data
-        description: Disallow any non-system data or uses.
-        data_categories:
-          matches: OTHER
-          values:
-            - system.operations
-        data_uses:
-          matches: OTHER
-          values:
-            - provide
-        data_subjects:
-          matches: OTHER
-          values:
-            - anonymous_user
-        data_qualifier: aggregated
-  - fides_key: data_sharing_policy
-    name: Data Sharing
-    description: The privacy policy that governs sharing of data with third parties.
-    rules:
-      - name: Disallow Third-Party Marketing
-        description: Disallow collecting any user contact info to use for marketing.
-        data_categories:
-          matches: ANY # If any of these data categories are being used
-          values:
-            - account
-            - user
-        data_uses:
-          matches: ANY # And the use of the data is for third-party sharing
-          values:
-            - third_party_sharing
-        data_subjects:
-          matches: ANY # And the data subject is a customer
-          values:
-            - customer
-        # And the data is identifiable, trigger a violation
-        data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+- fides_key: fidesctl_policy
+  organization_fides_key: default_organization
+  name: Fidesctl Policy
+  description: The main privacy policy for Fidesctl.
+  rules:
+  - name: reject_non_system_data
+    data_categories:
+      matches: OTHER
+      values:
+      - system.operations
+    data_uses:
+      matches: OTHER
+      values:
+      - provide
+    data_subjects:
+      matches: OTHER
+      values:
+      - anonymous_user
+    data_qualifier: aggregated
+- fides_key: data_sharing_policy
+  organization_fides_key: default_organization
+  name: Data Sharing
+  description: The privacy policy that governs sharing of data with third parties.
+  rules:
+  - name: Disallow Third-Party Marketing
+    data_categories:
+      matches: ANY
+      values:
+      - account
+      - user
+    data_uses:
+      matches: ANY
+      values:
+      - third_party_sharing
+    data_subjects:
+      matches: ANY
+      values:
+      - customer
+    data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
