Push a continual "dev" image to dockerhub (#781)
* Push a continual "dev" image to dockerhub

* checkpoint

* add a dev tag to the nox constants and update the docker workflow to push latest on releases

* parametrize the docker push command with dev and prod

* add comments to docker_nox and add a push for the version

* update the changelog

* Flesh out docker ignore

Co-authored-by: Paul Sanders <psanders1@gmail.com>

* Nit the changelog

Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

* update workflow job names

Co-authored-by: Paul Sanders <psanders1@gmail.com>
Co-authored-by: Phil Salant <PSalant726@users.noreply.github.com>

--- a/.dockerignore
+++ b/.dockerignore
@@ -3,11 +3,31 @@ build/
 dist/
 src/fidesctl.egg-info/
 
+# Ignore Python-Specific Files
+.mypy_cache/
+.nox/
+.pytest_cache/
+__pycache__/
+.coverage
+
+# pyenv
+.python-version
+
+# Environments
+.env
+.venv
+env/
+venv/
+
+# Editors
+.vscode/
+.idea/
+
 # Ignore the docs
 docs/
 
 # Ignore dev files
+.git/
 .github/
 .devcontainer/
-
 node_modules/
