add a new dev-docker npm command and update the compose file to use it

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -33,7 +33,7 @@ services:
 
   fidesctl-ui:
     image: ethyca/fidesctl:local-ui
-    command: ["npm", "run", "dev"]
+    command: npm run dev-docker
     depends_on:
       - fidesctl
     expose:
