Execute Privacy Requests with Celery (#621)
 Updates the way privacy requests are dispatched into processing from a background process into a Celery task

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -5,6 +5,7 @@ services:
       context: .
       dockerfile: Dockerfile
     depends_on:
+      - celery
       - db
       - redis
     expose:
@@ -62,7 +63,7 @@ services:
     build:
       context: .
       dockerfile: Dockerfile
-    command: celery -A fidesops.tasks beat -l info --logfile=/var/log/celery.log
+    command: celery -A fidesops.tasks.celery_app worker --loglevel=info
     depends_on:
       redis:
         condition: service_started
