update domain -> host config references in stripe and sentry test infrastructure (#698)
Co-authored-by: Adam Sachs <adam@Adams-MacBook-Pro.local>
Co-authored-by: Adrian Galvan <adriang430@gmail.com>

--- a/saas_config.toml
+++ b/saas_config.toml
@@ -54,6 +54,6 @@ identity_email = ""
 
 [zendesk]
 domain = ""
-app_username = ""
-app_password = ""
+username = ""
+api_key = ""
 identity_email = ""
