--- a/.github/workflows/unsafe_pr_checks.yml
+++ b/.github/workflows/unsafe_pr_checks.yml
@@ -29,14 +29,14 @@ jobs:
           MAILCHIMP_USERNAME: ${{ secrets.MAILCHIMP_USERNAME }}
           MAILCHIMP_API_KEY: ${{ secrets.MAILCHIMP_API_KEY }}
           MAILCHIMP_IDENTITY_EMAIL: ${{ secrets.MAILCHIMP_IDENTITY_EMAIL }}
-          SENTRY_HOST: ${{ secrets.SENTRY_HOST }}
+          SENTRY_DOMAIN: ${{ secrets.SENTRY_DOMAIN }}
           SENTRY_ACCESS_TOKEN: ${{ secrets.SENTRY_ACCESS_TOKEN }}
           SENTRY_ERASURE_TOKEN: ${{ secrets.SENTRY_ERASURE_TOKEN }}
           SENTRY_IDENTITY_EMAIL: ${{ secrets.SENTRY_IDENTITY_EMAIL }}
           SENTRY_ERASURE_IDENTITY: ${{ secrets.SENTRY_ERASURE_IDENTITY }}
           SENTRY_USER_ID: ${{ secrets.SENTRY_USER_ID }}
           SENTRY_ISSUE_URL: ${{ secrets.SENTRY_ISSUE_URL }}
-          STRIPE_HOST: ${{ secrets.STRIPE_HOST }}
+          STRIPE_DOMAIN: ${{ secrets.STRIPE_DOMAIN }}
           STRIPE_API_KEY: ${{ secrets.STRIPE_API_KEY }}
           STRIPE_PAYMENT_TYPES: ${{ secrets.STRIPE_PAYMENT_TYPES }}
           STRIPE_ITEMS_PER_PAGE: ${{ secrets.STRIPE_ITEMS_PER_PAGE }}
@@ -56,4 +56,5 @@ jobs:
           ZENDESK_DOMAIN: ${{ secrets.ZENDESK_DOMAIN }}
           ZENDESK_USERNAME: ${{ secrets.ZENDESK_USERNAME }}
           ZENDESK_API_KEY: ${{ secrets.ZENDESK_API_KEY }}
+          ZENDESK_IDENTITY_EMAIL: ${{ secrets.ZENDESK_IDENTITY_EMAIL }}
         run: make pytest-saas
