Management UI updates (#702)
* reorder ui docs

* admi ui

* subject request detail finalization, datastore stub

* config edit

* comment out docs not implemented

* remove tracking

* changelog

* remove stray comment, add Canceled status

--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -45,6 +45,8 @@ nav:
       - Overview: ui/overview.md
       - Privacy Center: ui/privacy_center.md
       - Admin UI: 
+        - Subject Requests: ui/subject_requests.md
+        - Managing Datastores: ui/datastores.md
         - User Management: ui/user_management.md
   - Deployment Guide: deployment.md
   - Glossary: glossary.md
