[SaaS Connector] Salesforce (access) (#676)
Co-authored-by: Adam Sachs <adam@Adams-MacBook-Pro.local>
Co-authored-by: Hamza W <hamza@Hamzas-MacBook-Pro.local>

--- a/pytest.ini
+++ b/pytest.ini
@@ -21,6 +21,7 @@ markers =
     integration_hubspot
     integration_segment
     integration_outreach
+    integration_salesforce
     unit_saas
 
 filterwarnings =
