--- a/saas_config.toml
+++ b/saas_config.toml
@@ -17,14 +17,14 @@ hapikey = ""
 identity_email = ""
 
 [stripe]
-host = ""
+domain = ""
 api_key = ""
 payment_types = ""
 page_size = ""
 identity_email = ""
 
 [sentry]
-host = ""
+domain = ""
 access_token = ""
 identity_email = ""
 erasure_access_token = ""
@@ -50,6 +50,15 @@ client_secret = ""
 redirect_uri = ""
 page_size = ""
 requester_email = ""
+identity_email = ""
+
+[salesforce]
+domain = ""
+client_id = ""
+client_secret = ""
+access_token = ""
+username = ""
+password = ""
 identity_email = ""
 
 [zendesk]
