--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -42,7 +42,8 @@
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-redux": "^7.2.6",
-    "whatwg-fetch": "^3.6.2"
+    "whatwg-fetch": "^3.6.2",
+    "yup": "^0.32.11"
   },
   "devDependencies": {
     "@next/bundle-analyzer": "^12.0.10",
