Adds `fidesops worker` command to start the Celery worker [#663] (#673)
* add fidesops worker cmd

* rename Dockerfiles, adds worker specific dockerfile with no frontend

* formatting

* update container names, add separate dockerfile for worker

* pass worker args through to worker_main

* rename containers fidesops -> webserver, celery -> worker

* fix imports

* add return type

* update dockerfile

* describe changelog

* specify same argv for all celery instantiation

* add logging to cli

* add back .egg

* specify dockerfile to build from

--- a/docker-compose.no-db.yml
+++ b/docker-compose.no-db.yml
@@ -1,9 +1,8 @@
 services:
-  fidesops:
-    container_name: fidesops
+  webserver:
     build:
       context: .
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.app
     expose:
       - 8080
     healthcheck:
@@ -29,7 +28,7 @@ services:
   docs:
     build:
       context: docs/fidesops/
-      dockerfile: Dockerfile
+      dockerfile: Dockerfile.docs
     volumes:
       - ./docs/fidesops:/docs
     expose:
