Add working directory and node matrix

--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -43,6 +43,12 @@ jobs:
 
   Admin-UI-Cypress:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    defaults:
+      run:
+        working-directory: clients/admin-ui
     steps:
       - name: Checkout
         uses: actions/checkout@v2
