--- a/clients/admin-ui/cypress/.eslintrc.json
+++ b/clients/admin-ui/cypress/.eslintrc.json
@@ -1,3 +1,7 @@
 {
-  "extends": ["plugin:cypress/recommended"]
+  "extends": ["plugin:cypress/recommended"],
+  "parserOptions": {
+    "project": "./tsconfig.json",
+    "tsconfigRootDir": "cypress"
+  }
 }
