Configure cypress gh action

--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -64,5 +64,6 @@ jobs:
       - name: Cypress run
         uses: cypress-io/github-action@v4
         with:
-          build: npm run build
+          install: false
           start: npm run dev
+          wait-on: "https://localhost:3000"
