--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -46,9 +46,6 @@ jobs:
     strategy:
       matrix:
         node-version: [16.x]
-    defaults:
-      run:
-        working-directory: clients/admin-ui
     steps:
       - name: Checkout
         uses: actions/checkout@v2
@@ -59,7 +56,9 @@ jobs:
           node-version: ${{ matrix.node-version }}
 
       - name: Install dependencies
-        run: npm install
+        run: |
+          cd clients/admin-ui
+          npm install
 
       - name: Cypress run
         uses: cypress-io/github-action@v4
