Initial cypress setup (#833)
* Initial cypress setup

* Make sure cypress artifacts don't sneak in

* Configure cypress CI

* Add working directory and node matrix

* Configure eslint to play nicely with cypress

* Configure cypress gh action

* Add working directory

* Try to configure cypress again

* Fix wait-on url

* Clean up

--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -40,3 +40,30 @@ jobs:
 
       - name: Build
         run: npm run export
+
+  Admin-UI-Cypress:
+    runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        node-version: [16.x]
+    steps:
+      - name: Checkout
+        uses: actions/checkout@v2
+
+      - name: Use Node.js ${{ matrix.node-version }}
+        uses: actions/setup-node@v2
+        with:
+          node-version: ${{ matrix.node-version }}
+
+      - name: Install dependencies
+        run: |
+          cd clients/admin-ui
+          npm install
+
+      - name: Cypress run
+        uses: cypress-io/github-action@v4
+        with:
+          working-directory: clients/admin-ui
+          install: false
+          start: npm run dev
+          wait-on: "http://localhost:3000"
