--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -35,6 +35,7 @@
     "formik": "^2.2.9",
     "framer-motion": "^5",
     "i18n-iso-countries": "^7.4.0",
+    "js-yaml": "^4.1.0",
     "lodash.debounce": "^4.0.8",
     "msw": "^0.29.0",
     "next": "12.1.0",
@@ -51,6 +52,7 @@
     "@next/bundle-analyzer": "^12.0.10",
     "@testing-library/jest-dom": "^5.16.2",
     "@testing-library/react": "^12.1.3",
+    "@types/js-yaml": "^4.0.5",
     "@types/lodash.debounce": "^4.0.6",
     "@types/node": "17.0.10",
     "@types/react": "17.0.38",
