249 saas connector zendesk ticket erasure (#775)
Co-authored-by: Hamza W <hamza@Hamzas-MacBook-Pro.local>
Co-authored-by: Adrian Galvan <adriang430@gmail.com>

--- a/data/saas/config/zendesk_config.yml
+++ b/data/saas/config/zendesk_config.yml
@@ -39,6 +39,15 @@ saas_config:
             - name: email
               identity: email
           data_path: users
+        delete:
+          method: DELETE
+          path: /api/v2/users/<user_id>.json
+          param_values:
+            - name: user_id
+              references:
+                - dataset: zendesk_connector_example
+                  field: users.id
+                  direction: from
     - name: user_identities
       requests:
         read:
@@ -83,6 +92,15 @@ saas_config:
             configuration:
               source: body
               path: links.next
+        delete:
+          method: DELETE
+          path: /api/v2/tickets/<ticket_id>.json
+          param_values:
+            - name: ticket_id
+              references:
+                - dataset: zendesk_connector_example
+                  field: tickets.id
+                  direction: from
     - name: ticket_comments
       requests:
         read:
