706 Adds SaaS connection type to SaaS yaml config (#748)
* Adds Saas type to saas yaml config

* To allow data migration that queries on a connectiontype enum to work, update previous schema migrations that used "alter type" to update connection type to rename the enum type, create a new enum with the new types, and then delete the old enum type.

Co-authored-by: Dawn Pattison <pattisdr@users.noreply.github.com>

--- a/data/saas/config/outreach_config.yml
+++ b/data/saas/config/outreach_config.yml
@@ -1,6 +1,7 @@
 saas_config:
   fides_key: outreach_connector_example
   name: Outreach Example Config
+  type: outreach
   description: A sample schema representing the Outreach connector for Fidesops
   version: 0.0.1
 
