--- a/data/saas/config/hubspot_config.yml
+++ b/data/saas/config/hubspot_config.yml
@@ -1,6 +1,7 @@
 saas_config:
   fides_key: hubspot_connector_example
   name: Hubspot SaaS Config
+  type: hubspot
   description: A sample schema representing the Hubspot connector for Fidesops
   version: 0.0.1
 
