--- a/data/saas/config/stripe_config.yml
+++ b/data/saas/config/stripe_config.yml
@@ -1,6 +1,7 @@
 saas_config:
   fides_key: stripe_connector_example
   name: Stripe SaaS Config
+  type: stripe
   description: A sample schema representing the Stripe connector for Fidesops
   version: 0.0.1
 
