--- a/fidesops.toml
+++ b/fidesops.toml
@@ -34,6 +34,7 @@ REQUIRE_MANUAL_REQUEST_APPROVAL = false
 TASK_RETRY_COUNT = 0
 TASK_RETRY_DELAY = 1
 TASK_RETRY_BACKOFF = 1
+WORKER_ENABLED = false
 
 [root_user]
 ANALYTICS_OPT_OUT = false
