--- a/clients/admin-ui/package.json
+++ b/clients/admin-ui/package.json
@@ -17,7 +17,8 @@
     "copy-export": "rsync -a --delete out/ ../../src/fidesapi/build/static/",
     "prod-export": "npm run export && npm run copy-export",
     "cy:open": "cypress open",
-    "cy:run": "cypress run"
+    "cy:run": "cypress run",
+    "openapi:generate": "openapi --input http://localhost:8080/openapi.json --output ./src/types/api --exportCore false --exportServices false --indent 2"
   },
   "dependencies": {
     "@chakra-ui/react": "^1.8.0",
@@ -73,6 +74,7 @@
     "eslint-plugin-react-hooks": "^4.3.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^27.5.1",
+    "openapi-typescript-codegen": "^0.20.1",
     "typescript": "4.5.5"
   },
   "msw": {
