[skip ci] changes for fideslang 1.0.0
These initial changes catch up to the proposed state of 1.1.0 (and 1.0.0) by adding the tags values and updating the demo_resources/

--- a/demo_resources/demo_system.yml
+++ b/demo_resources/demo_system.yml
@@ -15,8 +15,8 @@ system:
     privacy_declarations:
       - name: Analyze customer behaviour for improvements.
         data_categories:
-          - user.provided.identifiable.contact
-          - user.derived.identifiable.device.cookie_id
+          - user.contact
+          - user.device.cookie_id
         data_use: improve.system
         data_subjects:
           - customer
@@ -34,7 +34,7 @@ system:
       - name: Collect data for marketing
         data_categories:
           #- user.provided.identifiable.contact # uncomment to add this category to the system
-          - user.derived.identifiable.device.cookie_id
+          - user.device.cookie_id
         data_use: advertising
         data_subjects:
           - customer
