--- a/demo_resources/demo_policy.yml
+++ b/demo_resources/demo_policy.yml
@@ -8,7 +8,7 @@ policy:
         data_categories:
           matches: ANY
           values:
-            - user.provided.identifiable.contact
+            - user.contact
         data_uses:
           matches: ANY
           values:
