test fixing publish_docs ci action (#818)
* test fixing publish_docs ci action

* update branch target to

* try another commit to see if publish_docs is triggered

* revert change to branch target

* allow publish docs on test branch (#819)

* allow publish docs on test branch

* remove main

* trying new empty commit

* reverting to main

* Temporarly disable paths

* Revert temporary test

* Add makefile

* pull latest

Co-authored-by: Paul Sanders <pau@ethyca.com>

--- a/.github/workflows/publish_docs.yaml
+++ b/.github/workflows/publish_docs.yaml
@@ -6,16 +6,18 @@ on:
       - main
     paths:
       - "docs/**"
-  
+
 jobs:
   publish_docs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
       - uses: actions/setup-python@v4
+        with:
+          python-version: 3.9
+          cache: "pip"
       - run: pip install -r docs/fidesops/requirements.txt
       - name: Build docs
         run: make docs-build
       - name: Publish docs
         run: mkdocs gh-deploy -v -f docs/fidesops/mkdocs.yml --force
-        
