--- a/requirements.txt
+++ b/requirements.txt
@@ -1,9 +1,10 @@
-alembic==1.6
+alembic==1.8.0
 click>=8.1
 colorama>=0.4.3
 cryptography>=36
 deepdiff==5.8.0
 fideslang==0.9.0
+fideslib==2.2.2
 fideslog==1.1.5
 loguru>=0.5,<0.6
 openpyxl==3.0.9
@@ -14,6 +15,6 @@ PyJWT==2.4.0
 pyyaml>=5,<6
 requests>=2,<3
 sqlalchemy==1.4.36
-SQLAlchemy-Utils==0.37
+SQLAlchemy-Utils==0.38.2
 toml>=0.10.1
 versioneer==0.19
