--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -65,5 +65,5 @@ jobs:
         with:
           working-directory: clients/admin-ui
           install: false
-          start: npm run dev
+          start: npm run cy:start
           wait-on: "http://localhost:3000"
