--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -3,6 +3,6 @@ include README.md
 include requirements.txt
 include dev-requirements.txt
 include versioneer.py
-include src/fidesctl/api/alembic.ini
+include src/fidesapi/alembic.ini
 include src/fidesctl/_version.py
 include src/fidesctl/templates/fides_datamap_template.xlsx
