--- a/demo_resources/demo_dataset.yml
+++ b/demo_resources/demo_dataset.yml
@@ -42,7 +42,7 @@ dataset:
     - name: state
       description: User's State
       data_categories:
-      - user.contact.state
+      - user.contact.address.state
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     - name: uuid
       description: User's unique ID
