--- a/.github/workflows/frontend_pr_checks.yml
+++ b/.github/workflows/frontend_pr_checks.yml
@@ -67,3 +67,4 @@ jobs:
           install: false
           start: npm run cy:start
           wait-on: "http://localhost:3000"
+          wait-on-timeout: 120
