--- a/.fides/system.yml
+++ b/.fides/system.yml
@@ -12,7 +12,7 @@ system:
   - name: Store system data.
     data_categories:
     - system.operations
-    - user.provided.identifiable.contact
+    - user.contact
     data_use: improve.system
     data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     data_subjects:
