--- a/tests/data/failing_dataset_field_taxonomy.yml
+++ b/tests/data/failing_dataset_field_taxonomy.yml
@@ -9,12 +9,12 @@ dataset:
           - name: First_Name
             description: A First Name Field
             data_categories:
-              - user.provided.identifiable.name
+              - user.name
             data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
           - name: political_opinion
             description: User's political opinion
             data_categories:
-              - user.provided.identifiable.political_opinion
+              - user.political_opinion
             data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized
 system:
   - fides_key: customer_data_sharing_system
@@ -24,7 +24,7 @@ system:
     privacy_declarations:
       - name: Share Political Opinions
         data_categories:
-          - user.provided.identifiable
+          - user
         data_use: advertising
         data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
         data_subjects:
@@ -43,7 +43,7 @@ policy:
         data_categories:
           matches: ANY
           values:
-            - user.provided.identifiable.political_opinion
+            - user.political_opinion
         data_uses:
           matches: ANY
           values:
