--- a/docs/fidesops/mkdocs.yml
+++ b/docs/fidesops/mkdocs.yml
@@ -3,32 +3,28 @@ site_url: https://ethyca.github.io/fidesops/
 nav:
   - What is Fidesops?: index.md
   - Use Cases: use_cases.md
-  - Getting Started: getting_started.md
-  - Tutorial:
-    - Zero to Privacy Request: tutorial/index.md
-    - Installing Fidesops: tutorial/installation.md
-    - Outlining our Python Script: tutorial/outline.md
-    - Creating an Oauth Client: tutorial/oauth_client.md
-    - Connecting to Postgres: tutorial/postgres_connection.md
-    - Annotating our Database: tutorial/annotate_datasets.md
-    - Configuring our Storage Destination: tutorial/storage_config.md
-    - Defining a Policy: tutorial/define_policy.md
-    - Executing a Privacy Request: tutorial/execute_privacy_request.md
-  - How-To Guides:
+  - Installation and Use: 
+      - Getting Started: getting_started.md
       - Authenticate with OAuth: guides/oauth.md  
-      - Connect SQL and NoSQL Databases: guides/database_connectors.md
-      - Configure Datasets: guides/datasets.md
-      - Define Manual Datasets: guides/manual_data.md
+      - Connect to Databases: guides/database_connectors.md
+      - Define Datasets: guides/datasets.md
+      - Configure Policies: guides/policies.md  
+      - Execute Privacy Requests: guides/privacy_requests.md
+  - Fidesops UI:
+      - Overview: ui/overview.md
+      - Privacy Center: ui/privacy_center.md
+      - Admin UI: 
+        - Subject Requests: ui/subject_requests.md
+        - Managing Datastores: ui/datastores.md
+        - User Management: ui/user_management.md
+  - How-To Guides:
       - Annotate Complex Fields: guides/complex_fields.md
-      - Preview Query Execution: guides/query_execution.md  
-      - Create Request Policies: guides/policies.md  
-      - Configure Data Masking Strategies: guides/masking_strategies.md  
+      - Configure Data Masking: guides/masking_strategies.md  
       - Configure Storage Destinations: guides/storage.md
       - Configure Policy Webhooks: guides/policy_webhooks.md
-      - Execute Privacy Requests: guides/privacy_requests.md
       - Report on Privacy Requests: guides/reporting.md
       - Configure OneTrust Integration: guides/onetrust.md  
-      - Configuration Reference: guides/configuration_reference.md
+      - Preview Query Execution: guides/query_execution.md  
       - Data Rights Protocol: guides/data_rights_protocol.md
   - SaaS Connectors:
       - Connect to SaaS Applications: saas_connectors/saas_connectors.md
@@ -41,16 +37,20 @@ nav:
         - Segment: saas_connectors/example_configs/segment.md
         - Sentry: saas_connectors/example_configs/sentry.md
         - Stripe: saas_connectors/example_configs/stripe.md
-  - Fidesops UI:
-      - Overview: ui/overview.md
-      - Privacy Center: ui/privacy_center.md
-      - Admin UI: 
-        - Subject Requests: ui/subject_requests.md
-        - Managing Datastores: ui/datastores.md
-        - User Management: ui/user_management.md
+  - Configuration Reference: guides/configuration_reference.md
   - Deployment Guide: deployment.md
   - Glossary: glossary.md
   - API: api/index.md
+  - Tutorial:
+    - Zero to Privacy Request: tutorial/index.md
+    - Install Fidesops: tutorial/installation.md
+    - Outline a Python Script: tutorial/outline.md
+    - Create an Oauth Client: tutorial/oauth_client.md
+    - Connect to Postgres: tutorial/postgres_connection.md
+    - Annotate a Database: tutorial/annotate_datasets.md
+    - Configure a Storage Destination: tutorial/storage_config.md
+    - Define a Policy: tutorial/define_policy.md
+    - Execute a Privacy Request: tutorial/execute_privacy_request.md
   - Development:
       - Overview: development/overview.md
       - Contributing Details: development/contributing_details.md
