Update fideslang to 1.1.0 (#865)
* [skip ci] changes for fideslang 1.0.0

These initial changes catch up to the proposed state of 1.1.0 (and 1.0.0) by adding the tags values and updating the demo_resources/

* [skip ci] adjust resources

* update .fides/ resources for fideslang 1.1.0

* fideslang docs changes

* test updates for fideslang changes

* clean up further test failures and visualize sort

* generzte front end changes

* changelog

--- a/demo_resources/demo_dataset.yml
+++ b/demo_resources/demo_dataset.yml
@@ -26,13 +26,13 @@ dataset:
     - name: email
       description: User's Email
       data_categories:
-      - user.provided.identifiable.contact.email
+      - user.contact.email
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: Account termination
     - name: first_name
       description: User's first name
       data_categories:
-      - user.provided.identifiable.name
+      - user.name
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: Account termination
     - name: food_preference
@@ -42,10 +42,10 @@ dataset:
     - name: state
       description: User's State
       data_categories:
-      - user.provided.identifiable.contact.state
+      - user.contact.address.state
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
     - name: uuid
       description: User's unique ID
       data_categories:
-      - user.derived.identifiable.unique_id
+      - user.unique_id
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
