--- a/demo_resources/demo_system.yml
+++ b/demo_resources/demo_system.yml
@@ -15,8 +15,8 @@ system:
     privacy_declarations:
       - name: Analyze customer behaviour for improvements.
         data_categories:
-          - user.provided.identifiable.contact
-          - user.derived.identifiable.device.cookie_id
+          - user.contact
+          - user.device.cookie_id
         data_use: improve.system
         data_subjects:
           - customer
@@ -33,8 +33,8 @@ system:
     privacy_declarations:
       - name: Collect data for marketing
         data_categories:
-          #- user.provided.identifiable.contact # uncomment to add this category to the system
-          - user.derived.identifiable.device.cookie_id
+          #- user.contact # uncomment to add this category to the system
+          - user.device.cookie_id
         data_use: advertising
         data_subjects:
           - customer
