--- a/.github/workflows/docker.yaml
+++ b/.github/workflows/docker.yaml
@@ -35,6 +35,12 @@ jobs:
       - name: Push Fidesctl Dev Tag
         run: nox -s "push(dev)"
 
+      - name: Check Prod Tag
+        id: check-tag
+        run: |
+          if [[ ${{ github.event.ref }} =~ ^refs/tags/[0-9]+\.[0-9]+\.[0-9]+$ ]]; then
+              echo ::set-output name=match::true
+          fi
       - name: Push Fidesctl Prod Tags
-        if: ${{ env.TAG }}
+        if: steps.check-tag.outputs.match == 'true'
         run: nox -s "push(prod)"
