--- a/.github/workflows/safe_pr_checks.yml
+++ b/.github/workflows/safe_pr_checks.yml
@@ -71,7 +71,7 @@ jobs:
         pip install -U pip
         pip install -r dev-requirements.txt
         pip install -e .
-    - name: run pylint
+    - name: run mypy
       run: mypy src
 
   Docker-Build:
