--- a/.fides/dataset.yml
+++ b/.fides/dataset.yml
@@ -1,6 +1,7 @@
 dataset:
 - fides_key: public
   organization_fides_key: default_organization
+  tags: null
   name: public
   description: The dataset responsible for storing all of the data related to a fidesctl
     instance.
@@ -81,14 +82,14 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
+    - name: tags
       description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
+    - name: updated_at
       description: null
       data_categories:
       - system.operations
@@ -150,14 +151,14 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
+    - name: tags
       description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
+    - name: updated_at
       description: null
       data_categories:
       - system.operations
@@ -228,14 +229,14 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
+    - name: tags
       description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
+    - name: updated_at
       description: null
       data_categories:
       - system.operations
@@ -333,14 +334,14 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
+    - name: tags
       description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
+    - name: updated_at
       description: null
       data_categories:
       - system.operations
@@ -468,6 +469,13 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
+    - name: tags
+      description: null
+      data_categories:
+      - system.operations
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+      retention: null
+      fields: null
     - name: third_country_transfers
       description: null
       data_categories:
@@ -477,13 +485,6 @@ dataset:
       fields: null
     - name: updated_at
       description: The timestamp of when the row was last updated
-      data_categories:
-      - system.operations
-      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
-      retention: null
-      fields: null
-    - name: tags
-      description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -644,15 +645,15 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
-      description: The timestamp of when the row was last updated
+    - name: tags
+      description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
-      description: null
+    - name: updated_at
+      description: The timestamp of when the row was last updated
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -713,15 +714,15 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
-      description: The timestamp of when the row was last updated
+    - name: tags
+      description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
-      description: null
+    - name: updated_at
+      description: The timestamp of when the row was last updated
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -775,15 +776,15 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: updated_at
-      description: The timestamp of when the row was last updated
+    - name: tags
+      description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
-    - name: tags
-      description: null
+    - name: updated_at
+      description: The timestamp of when the row was last updated
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
@@ -909,6 +910,13 @@ dataset:
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
       retention: null
       fields: null
+    - name: tags
+      description: null
+      data_categories:
+      - system.operations
+      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
+      retention: null
+      fields: null
     - name: third_country_transfers
       description: null
       data_categories:
@@ -918,13 +926,6 @@ dataset:
       fields: null
     - name: updated_at
       description: The timestamp of when the row was last updated
-      data_categories:
-      - system.operations
-      data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
-      retention: null
-      fields: null
-    - name: tags
-      description: null
       data_categories:
       - system.operations
       data_qualifier: aggregated.anonymized.unlinked_pseudonymized.pseudonymized.identified
